# readable-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  Tasks.md
.claude/: settings.local.json
src/: extractor.rs  lib.rs  logging.rs  models.rs  node_ext.rs  node_utils.rs  utils.rs
src/extractor/: article.rs
src/extractor/article/: cleaner.rs  scorer.rs  utils.rs
src/extractor/article/cleaner/: utils.rs
src/logging/: logger.rs  logging_defs.rs  macros.rs
tests/: end_to_end_tests.rs
